--- a/main.html
+++ b/main.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 
 <html>
-
+	
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<label for="Name"> Name</label>
+	<input type="text" id="name" placeholder="Name"> <br>
+
+	<label for="phone number"> phone Number</label>
+	<input type="text" id="phone" placeholder="Phone Number"> <br>
+
+	<label for="Address">Address</label>
+	<input type="text" id="address" placeholder="address"> <br>
+
+	<label for="checkbox"> Have you ever lived with a Dog before?</label>
+	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"> Yes<br>
+
+	<label for="select">Please select your preferred breeds</label>
+    <select id="multiSelect">
+	<option>*****Dog Breed*****</option>
+	<option>German sheferd</option>
+	<option>bull Dog</option>
+	<option>husky</option>
+	<option>rotwiler</option>
+	</select>
+	
+		<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
